<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginBottom="@dimen/default_padding"
        android:gravity="center">

    <!--    native-->
        <Button
            android:id="@+id/nativeUiBtn"
            android:layout_width="@dimen/into_screen_width_btn"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/native_controls_btn"/>
        <TextView
            android:layout_width="@dimen/into_screen_width_description"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/native_controls_description"
            android:gravity="center"/>

    <!--    collect-->
        <Button
            android:id="@+id/collectUiBtn"
            android:layout_width="@dimen/into_screen_width_btn"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/collect_controls_btn"
            android:layout_marginTop="@dimen/default_padding"/>

        <TextView
            android:layout_width="@dimen/into_screen_width_description"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/collect_controls_description"
            android:gravity="center"/>

    <!--    show-->
        <Button
            android:id="@+id/showUiBtn"
            android:layout_width="@dimen/into_screen_width_btn"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/show_controls_btn"
            android:layout_marginTop="@dimen/default_padding"/>

        <TextView
            android:layout_width="@dimen/into_screen_width_description"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/show_controls_description"
            android:gravity="center"/>


        <!--    general UI -->
        <Button
            android:id="@+id/generalUiBtn"
            android:layout_width="@dimen/into_screen_width_btn"
            android:layout_height="wrap_content"
            android:text="@string/general_controls_btn"
            android:layout_marginTop="@dimen/default_padding"/>

        <TextView
            android:layout_width="@dimen/into_screen_width_description"
            android:layout_height="wrap_content"
            android:text="@string/general_controls_description"
            android:gravity="center"/>

    </LinearLayout>

</ScrollView>