<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#61000000">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:paddingTop="@dimen/half_default_padding"
            android:paddingBottom="@dimen/default_padding">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/default_padding"
                    android:paddingStart="@dimen/default_padding"
                    android:paddingEnd="@dimen/default_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_cards"
                        android:textColor="@color/title_color"
                        android:drawablePadding="@dimen/half_default_padding"
                        android:textSize="@dimen/collect_activity_cards_title_text_size"
                        android:text="@string/collect_activity_cards_title"
                        android:layout_marginBottom="@dimen/default_padding"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/previewCard"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_preview_height"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:cardCornerRadius="@dimen/half_default_padding"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/half_default_padding">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_card_preview">

                            <include layout="@layout/layout_preview_card"/>

                        </FrameLayout>
                    </androidx.cardview.widget.CardView>

                    <include layout="@layout/layout_collect_payment_card"/>

                    <include layout="@layout/layout_show_reveal_card"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/default_padding"
                        android:gravity="end">

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textColor="@android:color/white"
                                android:textSize="14dp"/>
                        </FrameLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/revealBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:textSize="14dp"
                            android:text="@string/collect_activity_reveal_btn"
                            android:layout_marginEnd="@dimen/default_padding"
                            app:backgroundTint="@color/colorAccent"
                            app:cornerRadius="@dimen/default_padding"/>


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/submitBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:textSize="14dp"
                            android:text="@string/collect_activity_submit_btn"
                            android:layout_marginEnd="@dimen/half_default_padding"
                            app:backgroundTint="@color/colorAccent"
                            app:cornerRadius="@dimen/default_padding"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/attachBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:textColor="@color/colorAccent"
                            android:textSize="14dp"
                            app:iconTint="@color/colorAccent"
                            app:icon="@drawable/ic_attach_file"
                            android:text="@string/collect_activity_attach_btn"
                            android:layout_marginEnd="@dimen/default_padding"
                            android:background="@color/colorAccent"
                            app:cornerRadius="33dp"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone"
                            android:clickable="true"
                            android:layout_gravity="center_vertical">
                            <ImageView
                                android:clickable="false"
                                android:layout_width="12dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_attach_file"
                                android:layout_marginEnd="@dimen/half_default_padding"/>
                            <TextView
                                android:id="@+id/attachBtnTitle"
                                android:clickable="false"
                                android:text="@string/collect_activity_attach_btn"
                                android:textColor="@color/colorAccent"
                                android:textSize="14dp"
                                android:textAllCaps="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"/>
                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/default_padding"
                        android:gravity="end">

                        <TextView
                            android:text="@string/collect_activity_state_item"
                            android:textColor="@color/state_active"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textSize="14dp"
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/responseTitleView"
                            android:text="@string/collect_activity_response_item"
                            android:textColor="@color/state_unactive"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textSize="14dp"
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorAccent"
                        android:layout_marginTop="@dimen/half_default_padding" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@android:color/white"
                        android:layout_marginBottom="@dimen/half_default_padding"
                        android:padding="@dimen/default_padding"
                        android:gravity="end">

                        <TextView
                            android:id="@+id/stateContainerView"
                            android:textColor="#5D6A7A"
                            android:layout_weight="1"
                            android:textSize="10dp"
                            android:layout_width="0dp"
                            android:paddingEnd="@dimen/half_default_padding"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/responseContainerView"
                            android:textColor="#5D6A7A"
                            android:layout_weight="1"
                            android:textSize="10dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </FrameLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:visibility="invisible">
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:background="#09000000"
            android:progressTint="@color/colorAccent"/>
    </FrameLayout>
</FrameLayout>

